Railway pull